--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
@@ -5,169 +5,97 @@
     </div>
     <div class="page">
         <div class="stepper">
-            <app-stepper [currentStepperIndex]="currentStepperIndex"
+            <app-stepper [currentStepperIndex]="currentStepperIndex" [stepperData]="stepperData"
                 (selectedStepperIndex)="selectedStepperIndex($event)">
                 <ng-template #stepsHeader>
                     <div class="text-wrapper">
                         <span class="title">{{pageTitle}}</span>
-                        <span class="sub-text">Follow the steps below to create a policy for an asset type</span>
+                        <span class="sub-text">Follow the steps below to Edit a policy for an asset type</span>
                     </div>
                 </ng-template>
                 <ng-template #stepsContent>
                     <div class="right-wrapper">
-                        <span class="form-wrapper-header">{{FormHeader}}</span>
+                        <div class="flex gap-8">
+                        <span class="subtitle-1">{{FormHeader}}</span>
+                        <mat-slide-toggle *ngIf="currentStepperName=='Autofix'" [checked]="isAutofixEnabled" (change)="toggleAutofix($event)"></mat-slide-toggle>
+                        </div>
                         <form class="form-wrapper" (ngSubmit)="onSubmit(policyForm)" #policyForm="ngForm">
-                            <div [hidden]="currentStepperIndex>0">
-                                <div class="type-wrapper">
+                            <div [hidden]="currentStepperName != 'Policy Details'">
+                                <app-input-field class="isDisabled" [(value)]="selectedPolicyType" placeholder="Policy Type"></app-input-field>
+                                <div class="details-wrapper">
+                                    <app-input-field class="isDisabled" [(value)]="policyDisplayName" placeholder="Policy Name"></app-input-field>
+                                    <app-input-field class="isDisabled" [(value)]="selectedAssetGroup" placeholder="Asset Group"></app-input-field>
+                                    <app-input-field class="isDisabled" [(value)]="selectedAssetType" placeholder="Asset Type"></app-input-field>
                                     <div class="dropdown">
-                                        <app-dropdown [required]="isRequired" [requiredInfo]="true"
-                                            [items]="policyTypeList" placeholder="Type"
-                                            [selectedItem]="selectedPolicyType" name="policyType"
-                                            [isDisabled]="!isCreate" (selected)="selectedType($event)">
-                                        </app-dropdown>
-                                    </div>
-                                    <div class="policy-executable" *ngIf="selectedPolicyType=='Federated'">
-                                        <div class="input-form">
-                                            <input autocomplete="off" type="file" id="selectJarFile" class="hide"
-                                                required (change)="onJarFileChange($event)" name="policyJarFile"
-                                                [(ngModel)]="policyJarFile" *ngIf="policyJarFileName==''">
-                                            <a class="tmbutton bm20 upload" (click)="openJarFileBrowser($event)">Upload
-                                                JAR File</a>
-                                        </div>
-                                        <span class="notSelected" *ngIf="policyJarFileName==''">No File
-                                            Choosen</span>
-                                        <div class="selected-file" *ngIf="policyJarFileName!=''">
-                                            <div class="fileName" title="{{policyJarFileName}}">
-                                                {{policyJarFileName}}
-                                            </div>
-                                            <img class="delete-icon" width="12px" src="../assets/icons/x-icon.svg"
-                                                (click)="removeJarFileName()">
-                                        </div>
-                                    </div>
-                                    <div *ngIf="selectedPolicyType=='Serverless'">
-                                        <div class="input-wrapper">
-                                            <mat-form-field appearance="outline">
-                                                <mat-label>Policy Url</mat-label>
-                                                <input autocomplete="off" matInput name="policyUrl"
-                                                    [(ngModel)]="policyUrl" required>
-                                            </mat-form-field>
-                                            <div class="info-img">
-                                                <img src="../../../assets/icons/info-circle.svg">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="details-wrapper" [class.isDisabled]="!selectedPolicyType">
-                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
-                                        <mat-form-field appearance="outline">
-                                            <mat-label>Policy Name</mat-label>
-                                            <input autocomplete="off" matInput name="policyDisplayName"
-                                                [(ngModel)]="policyDisplayName" required>
-                                        </mat-form-field>
-                                        <div class="info-img">
-                                            <img src="../../../assets/icons/info-circle.svg">
-                                        </div>
-                                    </div>
-                                    <div class="dropdown" [class.isDisabled]="isManagePolicy">
-                                        <app-dropdown [required]="isRequired" [requiredInfo]="true" [optionImage]="true"
-                                            [items]="datasourceDetails" placeholder="Asset Group"
-                                            [selectedItem]="selectedAssetGroup" name="assetGroup"
-                                            (selected)="onSelectAssetGroup($event)">
-                                        </app-dropdown>
-                                    </div>
-                                    <div class="dropdown" [class.isDisabled]="isManagePolicy">
-                                        <app-dropdown [required]="isRequired" [requiredInfo]="true"
-                                            [items]="targetTypesNames" placeholder="Asset Type"
-                                            [selectedItem]="selectedAssetType" name="assetType"
-                                            (selected)="onSelectAssetType($event)">
-                                        </app-dropdown>
-                                    </div>
-                                    <div class="dropdown" [class.isEnabled]="selectedPolicyType=='ManagePolicy'">
                                         <app-dropdown [required]="isRequired" [requiredInfo]="true" [optionImage]="true"
                                             [items]="policySeverities" placeholder="Severity"
                                             [selectedItem]="selectedSeverity" name="severity"
                                             (selected)="onSelectSeverity($event)">
                                         </app-dropdown>
                                     </div>
-                                    <div class="dropdown" [class.isEnabled]="selectedPolicyType=='ManagePolicy'">
+                                    <div class="dropdown">
                                         <app-dropdown [required]="isRequired" [requiredInfo]="true" [optionImage]="true"
                                             [items]="policyCategories" placeholder="Category"
                                             [selectedItem]="selectedCategory" name="category"
                                             (selected)="onSelectCategory($event)">
                                         </app-dropdown>
                                     </div>
-                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
-                                        <mat-form-field appearance="outline">
-                                            <mat-label>Description</mat-label>
-                                            <input autocomplete="off" matInput name="description"
-                                                [(ngModel)]="description" required>
-                                        </mat-form-field>
-                                        <div class="info-img">
-                                            <img src="../../../assets/icons/info-circle.svg">
-                                        </div>
-                                    </div>
-                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
-                                        <mat-form-field appearance="outline">
-                                            <mat-label>Resolution</mat-label>
-                                            <input autocomplete="off" matInput name="resolution"
-                                                [(ngModel)]="resolution">
-                                        </mat-form-field>
-                                        <div class="info-img">
-                                            <img src="../../../assets/icons/info-circle.svg">
-                                        </div>
-                                    </div>
-                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
-                                        <mat-form-field appearance="outline">
-                                            <mat-label>Resolution Link</mat-label>
-                                            <input autocomplete="off" matInput name="resolutionUrl"
-                                                [(ngModel)]="resolutionUrl">
-                                        </mat-form-field>
-                                        <div class="info-img">
-                                            <img src="../../../assets/icons/info-circle.svg">
-                                        </div>
-                                    </div>
+                                    <app-input-field class="isDisabled" [(value)]="description" placeholder="Description"></app-input-field>
+                                    <app-input-field class="isDisabled" [(value)]="resolution" placeholder="Resolution"></app-input-field>
+                                    <app-input-field class="isDisabled" [(value)]="resolutionUrl" placeholder="Resolution Link"></app-input-field>
                                 </div>
                             </div>
-                            <div [hidden]="currentStepperIndex==0">
+                            <div [hidden]="currentStepperName != 'Policy Parameters'">
                                 <div class="header-wrapper">
                                     <span class="params-header">Select Key</span>
                                     <span class="params-header">Enter Value</span>
                                 </div>
                                 <div class="parameters-wrapper">
-                                    <div class="parameter-wrapper" *ngFor="let param of paramsList;let i=index">
-                                        <mat-form-field appearance="outline" [class.isDisabled]="!isCreate">
-                                            <input autocomplete="off" matInput name="key-{{i}}" required
-                                                [(ngModel)]="param.key">
-                                        </mat-form-field>
-                                        <mat-form-field appearance="outline"
-                                            [class.isDisabled]="!isCreate && !param.isEdit">
-                                            <input autocomplete="off" matInput name="value-{{i}}"
-                                                [required]="param.isMandatory" [(ngModel)]="param.value">
-                                        </mat-form-field>
-                                        <div class="image-wrapper" *ngIf="selectedPolicyType!='ManagePolicy'">
-                                            <img class="add-icon" [class.isLastIndex]="paramsList.length == i+1"
-                                                src="../assets/icons/plus-circle.svg" (click)="addPolicyParameters()">
-                                            <img class="remove-icon" *ngIf="i>0" src="../assets/icons/x-icon.svg"
-                                                (click)="removePolicyParameters(i)">
+                                    <div *ngFor="let param of paramsList;let i=index">
+                                        <div class="parameter-wrapper"  *ngIf="param.isEdit" >
+                                            <mat-form-field class="isDisabled" appearance="outline">
+                                                <input autocomplete="off" matInput name="key-{{i}}" 
+                                                    [(ngModel)]="param.displayName">
+                                            </mat-form-field>
+                                         <app-input-field [(value)]="param.value" [required]="param.isMandatory" [description]="param.description"></app-input-field>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div [hidden]="currentStepperName != 'Autofix'" class="autofix-wrapper">
+                                  <div [class.hide]="!isAutofixEnabled" class="flex flex-col gap-20">
+                                    <app-dropdown [items]="accountList" placeholder="Accounts" [isChipListEnabled]="true"
+                                    [selectedList]="selectedAccounts" (selected)="onAccountsChange($event)"></app-dropdown>
+                                    <app-input-field [(value)]="fixMailSubject" placeholder="Fix Subject"></app-input-field>
+                                    <app-input-field [(value)]="postFixMessage" placeholder="Fix Message"></app-input-field>
+                                    <app-input-field [(value)]="violationMessage" placeholder="Violation Message"></app-input-field>
+                                  </div>
+                                  <div class="notification-wrapper flex flex-col gap-20" *ngIf="isAutofixEnabled">
+                                    <div class="flex gap-8">
+                                        <span class="subtitle-1">Mute Notification</span>
+                                        <mat-slide-toggle [checked]="isSilentNotificationEnabled" (change)="toggleSilentNotification($event)"></mat-slide-toggle>
+                                    </div>
+                                    <div class="flex flex-col gap-20" *ngIf="!isSilentNotificationEnabled;else silent">
+                                        <app-input-field [(value)]="waitingTime" placeholder="Waiting Time"></app-input-field>
+                                        <app-input-field [(value)]="warningMailSubject" placeholder="Warning Subject"></app-input-field>
+                                        <app-input-field [(value)]="warningMessage" placeholder="Warning Message"></app-input-field>
+                                        <app-input-field [(value)]="maxEmailNotification" placeholder="Max Notification"></app-input-field>
+                                    </div>
+                                    <ng-template #silent>
+                                        <app-input-field [(value)]="elapsedTime" placeholder="Waiting Time"></app-input-field>
+                                    </ng-template>
+                                  </div>
+                            </div>
                         </form>
                         <div class="button-wrapper">
-                            <button class="button validate-btn" *ngIf="this.selectedPolicyType == 'Federated'"
-                                [class.hide]="currentStepperIndex==0" [class.disabled]="policyForm.form.invalid"
-                                [disabled]="policyForm.form.invalid" (click)=" onSubmit(policyForm)">
-                                Validate</button>
-                            <button class="button next-btn" [class.hide]="currentStepperIndex==0"
-                                [disabled]="policyForm.form.invalid" *ngIf="this.selectedPolicyType!='Federated'"
-                                (click)="onSubmit(policyForm)" [class.disabled]="policyForm.form.invalid">
+                            <button class="button next-btn" [class.hide]="currentStepperIndex+1<stepperData.length"
+                                (click)="onSubmit(policyForm)">
                                 {{submitBtn}}</button>
-                            <button class=" button back-btn" [class.hide]="currentStepperIndex==0"
-                                (click)="pageCounter('back')">Back</button>
-                            <button class="button next-btn" [class.hide]="currentStepperIndex>0"
+                            <button class="button next-btn" [class.hide]="currentStepperIndex+1==stepperData.length"
                                 (click)="pageCounter('next')">
                                 Next</button>
+                            <button class=" button back-btn" [class.hide]="currentStepperIndex==0"
+                                (click)="pageCounter('back')">Back</button>
                         </div>
                     </div>
                 </ng-template>
