--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -483,7 +483,6 @@ text.axis-title {
 }
 
 .flex {
-  display: table-cell;
   display: flex;
 }
 
@@ -957,6 +956,11 @@ html body .offline-ui.offline-ui-down.offline-ui-waiting .offline-ui-retry {
 .compliance-issues-container {
   width: 100%;
   height: 100%;
+}
+
+.subtitle-1{
+  font: var(--text-subtitle-1);
+  color: var(--text-medium-emphasis);
 }
 
 .sub-header,
