--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
@@ -5,27 +5,36 @@
     </div>
     <div class="page">
         <div class="stepper">
-            <app-stepper [currentStepperIndex]="currentStepperIndex" [stepperData]="stepperData"
+            <!-- <app-stepper [currentStepperIndex]="currentStepperIndex"
                 (selectedStepperIndex)="selectedStepperIndex($event)">
                 <ng-template #stepsHeader>
                     <div class="text-wrapper">
                         <span class="title">{{pageTitle}}</span>
                         <span class="sub-text">Follow the steps below to Edit a policy for an asset type</span>
                     </div>
-                </ng-template>
-                <ng-template #stepsContent>
-                    <div class="right-wrapper">
-                        <div class="flex gap-8">
-                        <span class="subtitle-1">{{FormHeader}}</span>
-                        <mat-slide-toggle *ngIf="currentStepperName=='Autofix'" [checked]="isAutofixEnabled" (change)="toggleAutofix($event)"></mat-slide-toggle>
+                </ng-template> -->
+                <!-- <ng-template #stepsContent> -->
+                    <div class="left-wrapper">
+                        <div class="text-wrapper">
+                            <span class="title">{{pageTitle}}</span>
+                            <span class="sub-text">Follow the steps below to create a policy for an asset type</span>
                         </div>
+                    </div>
+                    <div class="right-wrapper">
+                        <div class="title-wrapper">
+                        <span class="form-wrapper-header">{{FormHeader}}</span>
+                        <div class="status-wrapper">
+                        <mat-slide-toggle [checked]="status" (change)="toggleStatus($event)"></mat-slide-toggle>
+                        <span class="subtitle-2">Status</span>
+                        </div>
+                    </div>
                         <form class="form-wrapper" (ngSubmit)="onSubmit(policyForm)" #policyForm="ngForm">
-                            <div [hidden]="currentStepperName != 'Policy Details'">
-                                <app-input-field class="isDisabled" [(value)]="selectedPolicyType" placeholder="Policy Type"></app-input-field>
-                                <div class="details-wrapper">
-                                    <app-input-field class="isDisabled" [(value)]="policyDisplayName" placeholder="Policy Name"></app-input-field>
-                                    <app-input-field class="isDisabled" [(value)]="selectedAssetGroup" placeholder="Asset Group"></app-input-field>
-                                    <app-input-field class="isDisabled" [(value)]="selectedAssetType" placeholder="Asset Type"></app-input-field>
+                            <div class="policy-details-wrapper">
+                                <div class="header-wrapper">
+                                   <span class="table-header">Policy Details</span>
+                                </div>
+                                <div class="content-wrapper">
+                                    <div class="type-wrapper">
                                     <div class="dropdown">
                                         <app-dropdown [required]="isRequired" [requiredInfo]="true" [optionImage]="true"
                                             [items]="policySeverities" placeholder="Severity"
@@ -40,27 +49,61 @@
                                             (selected)="onSelectCategory($event)">
                                         </app-dropdown>
                                     </div>
-                                    <app-input-field class="isDisabled" [(value)]="description" placeholder="Description"></app-input-field>
-                                    <app-input-field class="isDisabled" [(value)]="resolution" placeholder="Resolution"></app-input-field>
-                                    <app-input-field class="isDisabled" [(value)]="resolutionUrl" placeholder="Resolution Link"></app-input-field>
-                                </div>
-                            </div>
-                            <div [hidden]="currentStepperName != 'Policy Parameters'">
-                                <div class="header-wrapper">
-                                    <span class="params-header">Select Key</span>
-                                    <span class="params-header">Enter Value</span>
-                                </div>
-                                <div class="parameters-wrapper">
-                                    <div *ngFor="let param of paramsList;let i=index">
-                                        <div class="parameter-wrapper"  *ngIf="param.isEdit" >
-                                            <mat-form-field class="isDisabled" appearance="outline">
-                                                <input autocomplete="off" matInput name="key-{{i}}" 
-                                                    [(ngModel)]="param.displayName">
-                                            </mat-form-field>
-                                         <app-input-field [(value)]="param.value" [required]="param.isMandatory" [description]="param.description"></app-input-field>
+                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Description</mat-label>
+                                            <textarea autocomplete="off" matInput name="description"
+                                                [(ngModel)]="description" required></textarea>
+                                        </mat-form-field>
+                                        <div class="info-img">
+                                            <img src="../../../assets/icons/info-circle.svg">
+                                        </div>
+                                    </div>
+                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Resolution</mat-label>
+                                            <input autocomplete="off" matInput name="resolution"
+                                                [(ngModel)]="resolution">
+                                        </mat-form-field>
+                                        <div class="info-img">
+                                            <img src="../../../assets/icons/info-circle.svg">
+                                        </div>
+                                    </div>
+                                    <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Resolution Link</mat-label>
+                                            <input autocomplete="off" matInput name="resolutionUrl"
+                                                [(ngModel)]="resolutionUrl">
+                                        </mat-form-field>
+                                        <div class="info-img">
+                                            <img src="../../../assets/icons/info-circle.svg">
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                         <div class="policy-parameters-wrapper">
+                                    <div class="header-wrapper">
+                                        <span class="table-header">Policy Parameters</span>
+                                     </div>
+                                     <div class="content-wrapper">
+                                            <div class="parameters-wrapper">
+                                                <div *ngFor="let param of paramsList;let i=index">
+                                                    <div class="parameter-wrapper" *ngIf="param.isEdit" >
+                                                        <div class="input-wrapper">
+                                                            <mat-form-field appearance="outline">
+                                                                <mat-label>{{param.displayName}}</mat-label>
+                                                                <input autocomplete="off" matInput name="resolutionUrl"
+                                                                    [(ngModel)]="param.value">
+                                                            </mat-form-field>
+                                                            <div class="info-img">
+                                                                <img src="../../../assets/icons/info-circle.svg" [matTooltip]="param.description" matTooltipPosition="right">
+                                                            </div>
+                                                        </div>
+                                                </div>
+                                                </div>
+                                            </div>
+                                        </div>
                             </div>
                             <div [hidden]="currentStepperName != 'Autofix'" class="autofix-wrapper">
                                   <div [class.hide]="!isAutofixEnabled" class="flex flex-col gap-20">
@@ -88,18 +131,12 @@
                             </div>
                         </form>
                         <div class="button-wrapper">
-                            <button class="button next-btn" [class.hide]="currentStepperIndex+1<stepperData.length"
-                                (click)="onSubmit(policyForm)">
-                                {{submitBtn}}</button>
-                            <button class="button next-btn" [class.hide]="currentStepperIndex+1==stepperData.length"
-                                (click)="pageCounter('next')">
-                                Next</button>
-                            <button class=" button back-btn" [class.hide]="currentStepperIndex==0"
-                                (click)="pageCounter('back')">Back</button>
+                            <button class="button next-btn" [disabled]="policyForm.form.invalid"
+                                (click)="onSubmit(policyForm)">{{submitBtn}}</button>
                         </div>
                     </div>
-                </ng-template>
-            </app-stepper>
+                <!-- </ng-template> -->
+            <!-- </app-stepper> -->
         </div>
     </div>
 </div>
