--- a/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/create-edit-policy/create-edit-policy.component.html
@@ -5,20 +5,36 @@
     </div>
     <div class="page">
         <div class="stepper">
-            <app-stepper [currentStepperIndex]="currentStepperIndex"
+            <!-- <app-stepper [currentStepperIndex]="currentStepperIndex"
                 (selectedStepperIndex)="selectedStepperIndex($event)">
                 <ng-template #stepsHeader>
                     <div class="text-wrapper">
                         <span class="title">{{pageTitle}}</span>
                         <span class="sub-text">Follow the steps below to create a policy for an asset type</span>
                     </div>
-                </ng-template>
-                <ng-template #stepsContent>
+                </ng-template> -->
+                <!-- <ng-template #stepsContent> -->
+                    <div class="left-wrapper">
+                        <div class="text-wrapper">
+                            <span class="title">{{pageTitle}}</span>
+                            <span class="sub-text">Follow the steps below to create a policy for an asset type</span>
+                        </div>
+                    </div>
                     <div class="right-wrapper">
+                        <div class="title-wrapper">
                         <span class="form-wrapper-header">{{FormHeader}}</span>
+                        <div class="status-wrapper">
+                        <mat-slide-toggle [checked]="status" (change)="toggleStatus($event)"></mat-slide-toggle>
+                        <span class="subtitle-2">Status</span>
+                        </div>
+                    </div>
                         <form class="form-wrapper" (ngSubmit)="onSubmit(policyForm)" #policyForm="ngForm">
-                            <div [hidden]="currentStepperIndex>0">
-                                <div class="type-wrapper">
+                            <div class="policy-details-wrapper">
+                                <div class="header-wrapper">
+                                   <span class="table-header">Policy Details</span>
+                                </div>
+                                <div class="content-wrapper">
+                                    <div class="type-wrapper">
                                     <div class="dropdown">
                                         <app-dropdown [required]="isRequired" [requiredInfo]="true"
                                             [items]="policyTypeList" placeholder="Type"
@@ -99,8 +115,8 @@
                                     <div class="input-wrapper" [class.isDisabled]="isManagePolicy">
                                         <mat-form-field appearance="outline">
                                             <mat-label>Description</mat-label>
-                                            <input autocomplete="off" matInput name="description"
-                                                [(ngModel)]="description" required>
+                                            <textarea autocomplete="off" matInput name="description"
+                                                [(ngModel)]="description" required></textarea>
                                         </mat-form-field>
                                         <div class="info-img">
                                             <img src="../../../assets/icons/info-circle.svg">
@@ -128,50 +144,38 @@
                                     </div>
                                 </div>
                             </div>
-                            <div [hidden]="currentStepperIndex==0">
-                                <div class="header-wrapper">
-                                    <span class="params-header">Select Key</span>
-                                    <span class="params-header">Enter Value</span>
-                                </div>
-                                <div class="parameters-wrapper">
-                                    <div class="parameter-wrapper" *ngFor="let param of paramsList;let i=index">
-                                        <mat-form-field appearance="outline" [class.isDisabled]="!isCreate">
-                                            <input autocomplete="off" matInput name="key-{{i}}" required
-                                                [(ngModel)]="param.key">
-                                        </mat-form-field>
-                                        <mat-form-field appearance="outline"
-                                            [class.isDisabled]="!isCreate && !param.isEdit">
-                                            <input autocomplete="off" matInput name="value-{{i}}"
-                                                [required]="param.isMandatory" [(ngModel)]="param.value">
-                                        </mat-form-field>
-                                        <div class="image-wrapper" *ngIf="selectedPolicyType!='ManagePolicy'">
-                                            <img class="add-icon" [class.isLastIndex]="paramsList.length == i+1"
-                                                src="../assets/icons/plus-circle.svg" (click)="addPolicyParameters()">
-                                            <img class="remove-icon" *ngIf="i>0" src="../assets/icons/x-icon.svg"
-                                                (click)="removePolicyParameters(i)">
+                        </div>
+                         <div class="policy-parameters-wrapper">
+                                    <div class="header-wrapper">
+                                        <span class="table-header">Policy Parameters</span>
+                                     </div>
+                                     <div class="content-wrapper">
+                                            <div class="parameters-wrapper">
+                                                <div *ngFor="let param of paramsList;let i=index">
+                                                    <div class="parameter-wrapper" *ngIf="param.isEdit" >
+                                                        <div class="input-wrapper">
+                                                            <mat-form-field appearance="outline">
+                                                                <mat-label>{{param.displayName}}</mat-label>
+                                                                <input autocomplete="off" matInput name="resolutionUrl"
+                                                                    [(ngModel)]="param.value">
+                                                            </mat-form-field>
+                                                            <div class="info-img">
+                                                                <img src="../../../assets/icons/info-circle.svg" [matTooltip]="param.description" matTooltipPosition="right">
+                                                            </div>
+                                                        </div>
+                                                </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
                             </div>
                         </form>
                         <div class="button-wrapper">
-                            <button class="button validate-btn" *ngIf="this.selectedPolicyType == 'Federated'"
-                                [class.hide]="currentStepperIndex==0" [class.disabled]="policyForm.form.invalid"
-                                [disabled]="policyForm.form.invalid" (click)=" onSubmit(policyForm)">
-                                Validate</button>
-                            <button class="button next-btn" [class.hide]="currentStepperIndex==0"
-                                [disabled]="policyForm.form.invalid" *ngIf="this.selectedPolicyType!='Federated'"
-                                (click)="onSubmit(policyForm)" [class.disabled]="policyForm.form.invalid">
-                                {{submitBtn}}</button>
-                            <button class=" button back-btn" [class.hide]="currentStepperIndex==0"
-                                (click)="pageCounter('back')">Back</button>
-                            <button class="button next-btn" [class.hide]="currentStepperIndex>0"
-                                (click)="pageCounter('next')">
-                                Next</button>
+                            <button class="button next-btn" [disabled]="policyForm.form.invalid"
+                                (click)="onSubmit(policyForm)">{{submitBtn}}</button>
                         </div>
                     </div>
-                </ng-template>
-            </app-stepper>
+                <!-- </ng-template> -->
+            <!-- </app-stepper> -->
         </div>
     </div>
 </div>
