Rename Creation On to Date Created on policy details page

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -87,7 +87,7 @@
                         <span class="attribute-value">{{policyType}}</span>
                     </div>
                     <div class="attribute-wrapper">
-                        <span class="attribute-header">Creation On</span>
+                        <span class="attribute-header">Date Created</span>
                         <span class="attribute-value">{{createdDate}}</span>
                     </div>
                     <div class="attribute-wrapper">
